project/stage/tests/reject/bad_type_decl.ul
void main(){
  void thing;
  void[100] things;
}
